--- a/mojaTeretana/mojaTeretana/src/main/resources/static/registracija.html
+++ b/mojaTeretana/mojaTeretana/src/main/resources/static/registracija.html
@@ -6,21 +6,18 @@
     <script type="text/javascript" src="" defer></script>
     <base href="bURL">
     <link rel="stylesheet" href="/css/registracija.css">
-    <link rel="stylesheet" href="/css/home.css">
+	<link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/StiloviForma.css"/>
     <title>Registracija</title>
     <style>
 
     </style>
 </head>
 <body>
+
 <img src="/img/background.jpg">
-
-
-<br/>
-<ul>    
- 	<li><a href="index.html">Povratak</a></li>    
+ <a href="index.html"><button class="btn povratak">Back</button></a>
  
-</ul>  
 
 
 <div class="center">
